Emergency connect website

--- a/First Aid Trainings.html
+++ b/First Aid Trainings.html
@@ -24,7 +24,6 @@
    
   </style>
 
-
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-light shadow-sm">
@@ -41,7 +40,7 @@
               <li class="nav-item"><a class="nav-link" href="Quick access.html">Farms</a></li>
               <li class="nav-item"><a class="nav-link" href="Community Responders.html">Tractors</a></li>
               <li class="nav-item"><a class="nav-link" href="communication.html">Transport</a></li>
-              <li class="nav-item"><a class="nav-link" href="customers.html">Customers</a></li>
+              <li class="nav-item"><a class="nav-link" href="First Aid Trainings.html">Customers</a></li>
               <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>   
               <div class="col-md-3 text-end">
                 <button type="button" class="btn btn-outline-primary me-2">Login</button>
@@ -56,41 +55,40 @@
       </nav>
   <div class="container">
 
-    <h1 class="factory-heading h1-responsive text-center shadow py-3 mt-2">Trucks</h1>
+    <h1 class="factory-heading h1-responsive text-center shadow py-3 mt-2">Tractors</h1>
     <div class="row justify-content-center factory-row py-4">
       <section id="services">
-        <h2></h2>
         <div class="service-cards">
           <div class="service-card">
-            <img src="images/motor tata.jpeg" alt="" />
+            <img src="images/Tractor 1.jpeg" alt="" />
   
-            <h4>Sino Truck</h4>
+            <h4>Kubota Tractor</h4>
             <p>
               Location: Sherikat
             </p>
-            <p><span class="subtitle">Pricing</span> SSP 2000 per km</p>
+            <p><span class="subtitle">Pricing</span> SSP 50000 per hour</p>
             <p><span class="subtitle">Availability</span>: Available</p>
             <a href="#booking-form-submit"><button id="book-mountain-trek56" class="booking-btn" onclick="BookHere()">Hire</button></a>
           </div>
           <div class="service-card">
-            <img src="images/motor truck.jpeg" alt="" />
+            <img src="images/Tractor2.jpeg" alt="" />
   
-            <h4>Motor Truck</h4>
+            <h4>Case IH tractor</h4>
             <p>
               Location: Jebel
             </p>
-            <p><span class="subtitle">Pricing</span>: SSP 1000 per km</p>
+            <p><span class="subtitle">Pricing</span>: SSP 55000 per hour</p>
             <p><span class="subtitle">Availability</span>: Available</p>
             <a href="#booking-form-submit"><button id="book-mountain-trek56" class="booking-btn" onclick="BookHere()">Hire</button></a>
           </div>
           <div class="service-card">
-            <img src="images/Jac Motors truck.jpeg" alt="" />
+            <img src="images/Tractor3.jpeg" alt="" />
   
-            <h4>Jac Motors</h4>
+            <h4>Tractor</h4>
             <p>
              Location: Lologo 
             </p>
-            <p><span class="subtitle">Pricing</span>: SSP 2000 per km</p>
+            <p><span class="subtitle">Pricing</span>: SSP 45000 per hour</p>
             <p><span class="subtitle">Availability</span>: Available</p>
             <a href="#booking-form-submit"><button id="book-mountain-trek56" class="booking-btn" onclick="BookHere()">Hire</button></a>
           </div>
@@ -101,32 +99,32 @@
         
         <div class="service-cards">
           <div class="service-card">
-            <img src="images/tata motor truck.jpeg" alt="" />
-            <h4>Tata Motor</h4>
+            <img src="images/tractor4 massey ferguson.webp" alt="" />
+            <h4>Massey ferguson</h4>
             <p>
               Location: Custom
             </p>
-            <p><span class="subtitle">Pricing</span>: SSP 1500 per km</p>
+            <p><span class="subtitle">Pricing</span>: SSP 50000 per hour</p>
             <p><span class="subtitle">Availability</span>: Available</p>
             <a href="#booking-form-submit"><button id="book-mountain-trek56" class="booking-btn" onclick="BookHere()">Hire</button></a>
           </div>
           <div class="service-card">
-            <img src="images/tata motor.jpeg" alt="" />
-            <h4>Motor Tata</h4>
+            <img src="images/tractor5.jpg" alt="" />
+            <h4>Tractors PK</h4>
             <p>
               Location: Gudele
             </p>
-            <p><span class="subtitle">Pricing</span>: SSP 1000 per km</p>
+            <p><span class="subtitle">Pricing</span>: SSP 25000 per hour</p>
             <p><span class="subtitle">Availability</span>: Available</p>
             <a href="#booking-form-submit"><button id="book-mountain-trek56" class="booking-btn" onclick="BookHere()">Hire</button></a>
           </div>
           <div class="service-card">
-            <img src="images/Bolsters Motor.jpeg" alt="" />
-            <h4>Bolster Motor</h4>
+            <img src="images/tractor6.jpeg" alt="" />
+            <h4>Kubota</h4>
             <p>
               Location: Mapau
             </p>
-            <p><span class="subtitle">Pricing</span>: SSP 3000 per 1.5km</p>
+            <p><span class="subtitle">Pricing</span>: SSP 250000 per hour</p>
             <p><span class="subtitle">Availability</span>: Available</p>
             <a href="#booking-form-submit"><button id="book-mountain-trek56" class="booking-btn" onclick="BookHere()">Hire</button></a>
           </div>
