--- a/Quick access.html
+++ b/Quick access.html
@@ -27,8 +27,8 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="Quick access.html">Quick Access Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="tractors.html">Tractors</a></li>
-          <li class="nav-item"><a class="nav-link" href="Transport.html">Transport</a></li>
+          <li class="nav-item"><a class="nav-link" href="Community Responders.html">Tractors</a></li>
+          <li class="nav-item"><a class="nav-link" href="communication.html">Transport</a></li>
           <li class="nav-item"><a class="nav-link" href="customers.html">Customers</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>   
           <div class="col-md-3 text-end">
