--- a/services.html
+++ b/services.html
@@ -28,9 +28,9 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="Farm.html">Farms</a></li>
-          <li class="nav-item"><a class="nav-link" href="tractors.html">Tractors</a></li>
-          <li class="nav-item"><a class="nav-link" href="Transport.html">Transport</a></li>
+          <li class="nav-item"><a class="nav-link" href="Quick access.html">Farms</a></li>
+          <li class="nav-item"><a class="nav-link" href="Community Responders.html">Tractors</a></li>
+          <li class="nav-item"><a class="nav-link" href="communication.html">Transport</a></li>
           <li class="nav-item"><a class="nav-link" href="customers.html">Customers</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>   
           <div class="col-md-3 text-end">
