--- a/communication.html
+++ b/communication.html
@@ -51,8 +51,8 @@
               <li class="nav-item"><a class="nav-link" href="Quick access.html">Quick Access Services</a></li>
               <li class="nav-item"><a class="nav-link" href="Community Responders.html">Community Responders</a></li>
               <li class="nav-item"><a class="nav-link" href="communication.html">communication</a></li>
-              <li class="nav-item"><a class="nav-link" href="customers.html">Customers</a></li>
-              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>   
+              <li class="nav-item"><a class="nav-link" href="First Aid Trainings.html">First Aid Trainings</a></li>
+              <li class="nav-item"><a class="nav-link" href="contact Us.html">Contact Us</a></li>   
               <div class="col-md-3 text-end">
                 <button type="button" class="btn btn-outline-primary me-2">Login</button>
                 <button type="button" class="btn btn-primary">Sign-up</button>
