--- a/Quick access.html
+++ b/Quick access.html
@@ -342,16 +342,16 @@
         </div>
         <div class="col-md-3">
           <label for="State" name="State"  class="form-label">Emergencies</label>
-          <select class="form-select" id="validationCustom04" name="Items" required>
+          <select class="form-select" id="validationCustom04" name="Emergencies" required>
             <option selected disabled value="">Choose...</option>
-              <option value="Sorghum 50kg - SSP5000">Animal Disease Emergency</option>
-              <option value="Mangoes SSP1500 per Sack">Fire Emergency</option>
-              <option value="Cabbage SSP4000 per Sack">Firts Aid Emergency</option>
-              <option value="Oranges SSP2000 per Sack">Pests outbreak</option>
-              <option value="Carrot SSP2500 per Sack">Road Accident</option>
-              <option value="Corn SSP5000 per Sack">Children Disease Outbreak</option>
-              <option value="Garlic 20kg - SSP2400">Flooding</option>
-              <option value="Ginger SSP1300 per Sack">Any other Emergency</option>
+              <option value="Animal Disease Emergency">Animal Disease Emergency</option>
+              <option value="Fire Emergency">Fire Emergency</option>
+              <option value="Firts Aid Emergency">Firts Aid Emergency</option>
+              <option value="Pests outbreak">Pests outbreak</option>
+              <option value="Road Accident">Road Accident</option>
+              <option value="Children Disease Outbreak">Children Disease Outbreak</option>
+              <option value="Flooding">Flooding</option>
+              <option value="Any other Emergency">Any other Emergency</option>
           <div class="invalid-feedback">
             Please select a valid state.
           </div>
@@ -433,7 +433,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbyg5VxtlctQePuGawPJIIl7DQOOZl6MG-A0E-nCqHxgTfWFl4hJcKODZsFkIOYnd4uEHw/exec'
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbzOQBwgEJ0u4cBjAd_55NaK0EDGbmxETRu0OEf4rmXmFRG1xoG2Jw90xuXXzzPYWfgz/exec'
       const form = document.forms['submit-to-google-sheet']
     
       form.addEventListener('submit', e => {
