--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
   <section class="main">
     <div>
-      <h2>Have the glimpse of our services</h2>
+      <h2>Look at what we have for you</h2>
       <div class="glimpse">
       <span class="glim" >Quick Access</span>
       <span class="glim">Community Act</span>
@@ -313,24 +313,24 @@
       </p>
     </div>
     <div class="experience_delivery">
-      <h3>Our experience in services delivery</h3>
+      <h3>Our experience in emergency rescues</h3>
       <div class="experience">
         <p class="p2">
           We have ten years of experience, and we have impacted more than 20,000 lives in a 10-year period.</p>
-        <img src="images/EXPER.jpg" alt="">
+        <img src="images/flooding.jpeg" alt="">
       </div>
       <div class="proof">
         <div class="experience_proof">
-          <span>30k</span>
-          <p>Engaging emergency victims and Responders</p>
+          <span></span>
+          <p></p>
         </div>
         <div class="experience_proof">
-          <span>20k</span>
-          <p>Life Reach</p>
+          <span></span>
+          <p></p>
         </div>
         <div class="experience_proof">
-          <span>10+ years</span>
-          <p>Working experience</p>
+          <span></span>
+          <p></p>
         </div>
       </div>
       <section id="Gallery">
