--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/png" sizes="64x64" href="images/logo.jpg">
     <link rel="icon" type="image/png" sizes="128x128" href="images/logo.jpg">
     <link rel="icon" type="image/png" sizes="256x256" href="images/logo.jpg">
-  <title>APMS</title>
+  <title>EmCoP</title>
   <style>
 .bg-img {
     background-image: url('images/first\ aid.jpeg');
