--- a/contact Us.html
+++ b/contact Us.html
@@ -197,9 +197,9 @@
                     <div class="socials py-2 mx-2">
                       <h3 class="h3-responsive">Get in touch with us</h3>
                       <hr>
-                      <h6 class="h6-responsive"><span> <i class="fa fa-envelope" aria-hidden="true"></i> </span>majokdit711@gmail.com</h6>
-                      <h6 class="h6-responsive"><span> <i class="fa fa-phone" aria-hidden="true"></i> </span>+211 924828569</h6>
-                      <h6 class="h6-responsive"><span> <i class="fa fa-home" aria-hidden="true"></i> </span>Juba, South Sudan<br></h6>
+                      <h6 class="h6-responsive"><span> <i class="fa fa-envelope" aria-hidden="true"></i> </span>katiwamawia@gmail.com</h6>
+                      <h6 class="h6-responsive"><span> <i class="fa fa-phone" aria-hidden="true"></i> </span>+254 74828569</h6>
+                      <h6 class="h6-responsive"><span> <i class="fa fa-home" aria-hidden="true"></i> </span>kitui, Kenya<br></h6>
                     </div>
                     
                     <!-- Social icons -->
