--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
        <!-- Home page content -->
    <div class="home-page-content">
      <h1 class="text-center home-page-text h1-responsive">Emergency Connect Plus System</h1>
-     <h5 class="text-center home-supporting-text">Every community deserves best Healthcare services.</h5>
+     <h5 class="text-center home-supporting-text"></h5>
      <div class="home-buttons text-center fadeIn">
-      <a href="services.html"> <div class="btn homepage-btn-1 btn-lg mt-2">About Us</div></a>
+      <a href="services.html"> <div class="btn homepage-btn-1 btn-lg mt-2"></div></a>
      </div>
    </div>
    <!-- /Home page content -->
@@ -292,7 +292,7 @@
 
   <section class="main">
     <div>
-      <h2>Look at what we have for you</h2>
+      <h2>Our services</h2>
       <div class="glimpse">
       <span class="glim" >Quick Access</span>
       <span class="glim">Community Act</span>
@@ -313,10 +313,10 @@
       </p>
     </div>
     <div class="experience_delivery">
-      <h3>Our experience in emergency rescues</h3>
+      <h3>Experience proof image</h3>
       <div class="experience">
         <p class="p2">
-          We have ten years of experience, and we have impacted more than 20,000 lives in a 10-year period.</p>
+          </p>
         <img src="images/flooding.jpeg" alt="">
       </div>
       <div class="proof">
@@ -341,7 +341,7 @@
   </section>
   <section>
     <div class="container px-4 py-5" id="hanging-icons">
-      <h2 class="pb-2 border-bottom">Testimonial</h2>
+      <h2 class="pb-2 border-bottom">Attestion</h2>
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="col d-flex align-items-start">
           <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
@@ -432,7 +432,7 @@
           <div class="Testimonial">
             <div class="card">
               <div class="img-box p-1">
-                  <img class="img-fluid img-top" src="images/mary.jpg" alt="CEO, Founder" style="height: 250px; width: 250px;">
+                  <img class="img-fluid img-top" src="images/mary.jpg" alt="" style="height: 250px; width: 250px;">
               </div>
               <div class="card-body">
                  <div class="card-title">
@@ -463,7 +463,7 @@
           <div class="Testimonial">
             <div class="card">
               <div class="img-box p-1">
-                  <img class="img-fluid img-top" src="images/Ajok.jpeg" alt="CEO, Founder" style="height: 250px; width: 250px;">
+                  <img class="img-fluid img-top" src="images/Ajok.jpeg" alt="" style="height: 250px; width: 250px;">
               </div>
               <div class="card-body">
                  <div class="card-title">
