--- a/First Aid Trainings.html
+++ b/First Aid Trainings.html
@@ -70,7 +70,7 @@
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
           <img class="logo" src="images/agriculture-logo.jpg" alt="Logo">
-          <a class="navbar-brand" href="#"> <h2>APMS</h2></a>
+          <a class="navbar-brand" href="#"> <h2>EmCoP</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
