--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
      <h1 class="text-center home-page-text h1-responsive">Emergency Connect Plus System</h1>
      <h5 class="text-center home-supporting-text">Welcome</h5>
      <div class="home-buttons text-center fadeIn">
-      <a href="services.html"> <div class="btn homepage-btn-1 btn-lg mt-2"></div></a>
+      <a href="services.html"> <div class="btn homepage-btn-1 btn-lg mt-2">Welcome</div></a>
      </div>
    </div>
    <!-- /Home page content -->
