--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
        <!-- Home page content -->
    <div class="home-page-content">
      <h1 class="text-center home-page-text h1-responsive">Emergency Connect Plus System</h1>
-     <h5 class="text-center home-supporting-text">Welcome</h5>
+     <h5 class="text-center home-supporting-text"></h5>
      <div class="home-buttons text-center fadeIn">
       <a href="services.html"> <div class="btn homepage-btn-1 btn-lg mt-2">Welcome</div></a>
      </div>
